<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory Manager</string>
    <string name="empty_list_hint">Get started by adding your inventory</string>
    <string name="sale_button">Sale</string>
    <string name="order_button">Order</string>
    <string name="image_view_cd_product_photo">Product Photo</string>
    <string name="button_increase_qty"><xliff xliff:id="plus">+</xliff> qty</string>
    <string name="button_decrease_qty"><xliff xliff:id="minus">-</xliff> qty</string>
    <string name="button_contact_supplier">Contact Supplier</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Inventories</string>
    <string name="edit_text_hint_product_name">Product Name</string>
    <string name="edit_text_hint_product_code">Part Number</string>
    <string name="edit_text_hint_product_supplier">Product Supplier</string>
    <string name="edit_text_hint_product_supplier_email">Product Supplier Email</string>
    <string name="edit_text_hint_product_supplier_phone">Product Supplier Phone Number</string>
    <string name="edit_text_hint_product_price">Product Price</string>
    <string name="edit_text_hint_product_quantity">Product Quantity</string>
    <string name="editor_activity_title_new_pet">Add Product</string>
    <string name="editor_activity_title_edit_pet">Edit Product</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this stock?</string>
    <string name="delete_all_dialog_msg">Delete all stocks?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_dialog_product_photo">Select product photo</string>
    <string name="editor_insert_stock_failed">Error with saving stock</string>
    <string name="editor_insert_stock_successful">Stock saved</string>
    <string name="editor_update_stock_failed">Stock Update Failed</string>
    <string name="editor_update_stock_successful">Stock Update Succeed</string>
    <string name="editor_delete_stock_successful">Stock deleted</string>
    <string name="editor_delete_stock_failed">Error with deleting stock</string>
    <string name="new_product">Add new item</string>
    <string name="hint_email_address">e.g. supplier@gmail.com</string>
    <string name="supplier_email_title">Supplier E-mail Address</string>
    <string name="supplier_phone_hint">e.g. +1 000-000-0000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">e.g. Apple Inc.</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="currency_details">¥ / item</string>
    <string name="editor_activity_title_new_item">Add new item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="menu_order_item">Contact Supplier</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_delete_all_data">Delete all data</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">You can place an order for this item by phone or e-mail</string>
    <string name="delete_message">Are you sure you want to procede with the deletion?</string>
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>

</resources>
