<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <FrameLayout
            android:id="@+id/product_photo_container"
            style="@style/ProductPhotoContainer">

            <ImageView
                android:id="@+id/product_photo_image_view"
                style="@style/ProductPhotoImageView"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image_view_cd_product_photo"/>

        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="32dp">

                <TextView
                    android:id="@+id/product_name_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_title" />

                <EditText
                    android:id="@+id/product_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@+id/price_edit" />

                <TextView
                    android:id="@+id/part_number"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Part Number" />

                <EditText
                    android:id="@+id/part_number_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/price_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_title" />

                <EditText
                    android:id="@+id/price_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="6" />

                <TextView
                    android:id="@+id/quantity_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_title" />

                <EditText
                    android:id="@+id/quantity_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/supplier_name_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier_name_title" />

                <EditText
                    android:id="@+id/supplier_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_name_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/supplier_phone_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier_phone_title" />

                <EditText
                    android:id="@+id/supplier_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_phone_hint"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/supplier_email_title"
                    style="@style/details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier_email_title" />

                <EditText
                    android:id="@+id/supplier_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/sale_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_button"
                    android:textAllCaps="true"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

                <Button
                    android:id="@+id/order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_button"
                    android:textAllCaps="true"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>



            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
        
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_stock_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_photo_camera"
        app:fabSize="normal"
        app:layout_anchor="@id/product_photo_container"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>